--- a/templates/api/v2/api_explorer.haml
+++ b/templates/api/v2/api_explorer.haml
@@ -29,13 +29,16 @@
 
   - for endpoint in endpoints
     .card.mt-4.hover-box
-      .flex.bleed-x.bleed-t.bleed-b.items-center.cursor-pointer.endpoint-title{ data-slug: "{{ endpoint.slug }}", data-method: "{{ endpoint.method }}" }
-        .endpoint-method.font-mono.rounded-lg{ class:"method-{{ endpoint.method|lower }}" }= endpoint.method
-        .endpoint-url.flex-grow.font-mono {{ endpoint.url }}.json
-        .endpoint-description
+      .cursor-pointer.endpoint-title{ data-slug: "{{ endpoint.slug }}", data-method: "{{ endpoint.method }}" }
+        .endpoint-description{class: "md:hidden"}
           {{ endpoint.title }}
+        .flex.items-center
+          .endpoint-method.font-mono.rounded-lg{ class:"method-{{ endpoint.method|lower }}" }= endpoint.method
+          .endpoint-url.flex-grow.font-mono {{ endpoint.url }}.json
+          .endpoint-description.hidden{class: "md:block"}
+            {{ endpoint.title }}
 
-      .endpoint.bleed-x.bleed-b.bg-white.border-t.mt-6{ class: "endpoint-{{ endpoint.method|lower }}" }
+      .endpoint.bg-white.border-t.mt-6{ class: "endpoint-{{ endpoint.method|lower }}" }
         -if endpoint.params
           .title.my-4
             -trans "Query String Parameters"
@@ -65,20 +68,23 @@
 
         .request-form.rounded-lg.border.p-6.bg-gray-100.mt-4
           .request-header.font-mono.mb-4
-            <b class="font-bold">{{ endpoint.method }}</b> {{brand.api_link}}{{ endpoint.url }}.json<span class="query-display"></span><br/>
-            <b class="font-bold">Authorization:</b> Token {{ request.user.api_token }}
-
+            <b class="font-bold">{{ endpoint.method }}</b>
+            .whitespace-no-wrap.text-sm{class: "md:text-base md:inline"}
+              {{brand.api_link}}{{ endpoint.url }}.json<span class="query-display"></span><br/>
+            <b class="font-bold">Authorization:</b>
+            .whitespace-no-wrap.text-sm{class: "md:text-base md:inline"}
+              Token {{ request.user.api_token }}
           -if endpoint.params
-            .form-group.mt-4.flex.items-center
-              %label.control-label.self-start.pt-4.w-56.text-right.pr-6
+            .form-group.mt-4.items-center{class: "md:flex"}
+              %label.control-label.self-start.pt-4.w-56.pr-6{class: "md:text-right"}
                 -trans "Query String"
               .flex-grow
                 %textarea.textinput.p-2.rounded.request-query{ id:"request-query-{{ endpoint.slug }}", rows:"1" }<
                   {{ endpoint.example.query }}
 
           -if endpoint.fields
-            .form-group.mt-4.flex.items-center
-              %label.control-label.self-start.pt-4.w-56.text-right.pr-6
+            .form-group.mt-4.items-center{class: "md:flex"}
+              %label.control-label.self-start.pt-4.w-56.pr-6{class: "md:text-right"}
                 -trans "Post Body"
               .flex-grow
                 %textarea.textinput.p-2.rounded.request-body{ id:"request-body-{{ endpoint.slug }}", rows:"5" }<
@@ -197,15 +203,21 @@
       display: none;
     }
 
+    .request-form {
+      overflow-x: hidden;
+    }
+
     .request-query {
       font-family: monospace;
-      min-height: 40px;
-      width: 700px;
+      min-height: 30px;
+      max-width: 700px;
+      width: 100%;
     }
 
     .request-body {
       font-family: monospace;
-      width: 700px;
+      max-width: 700px;
+      width: 100%;
       min-height: 100px;
       height: 110px;
     }
