Distinguishable inactive users

--- a/templates/orgs/org_manage_accounts.haml
+++ b/templates/orgs/org_manage_accounts.haml
@@ -75,6 +75,13 @@
         #plan-form ul.errorlist li {
           color: #fff;
         }
+
+        .deactivated {
+          td {
+            color: tomato;
+            opacity: 0.5;
+          }
+        }
     {% endlessblock %}
 
 -block extra-style
@@ -114,7 +121,7 @@
         %td.alert.alert-error{colspan: 6}
           -trans "You must have at least one administator"
       - for user in org_users
-        %tr
+        %tr(class="{% if user.is_active %}{% else %}deactivated{% endif %}")
           %td
             {{user.email}}
             - if user.first_name or user.last_name
