--- a/templates/channels/types/rocketchat/claim.haml
+++ b/templates/channels/types/rocketchat/claim.haml
@@ -26,6 +26,10 @@
       -blocktrans trimmed with brand=brand.name
         Save the changes, copy the app's URL and back to {{ brand }} by pasting that URL on field below, so try connect.
 
+    %li
+      -blocktrans trimmed
+        To get the required Auth Token and User ID go to <b>Profile > My account > Personal Access Tokens > Generate a token without 2FA</b>, save the tokens as it will not be displayed again once the pop-up is closed.
+
 -block extra-style
   {{ block.super }}
 
