--- a/templates/smartmin/pjax.html
+++ b/templates/smartmin/pjax.html
@@ -25,7 +25,7 @@
     {% if refresh > 0 %}
     <script>
     refreshTimeout = {{ refresh }};
-    window.setTimeout(refresh, {{ refresh }});
+    latestScheduler = window.setTimeout(refresh, {{ refresh }});
     </script>
     {% endif %}
 {% endif %}
