--- a/templates/contacts/contact_import.haml
+++ b/templates/contacts/contact_import.haml
@@ -195,7 +195,7 @@
                   - elif not group.contacts.all
                     %p
                       -blocktrans
-                        No contacts imported, please make sure your have a channel connected.
+                        No contacts imported, please make sure you have a channel connected.
 
             - if show_form
               %p
