Removed nyaruka help links

--- a/templates/flows/flow_export_pdf.haml
+++ b/templates/flows/flow_export_pdf.haml
@@ -70,11 +70,7 @@
             mutable: false,
             filters: [],
 
-            help: {
-                legacy_extra: 'https://help.nyaruka.com/en/articles/3747485-migrating-away-from-legacy_extra',
-                missing_dependency: 'http://help.nyaruka.com/en/articles/3747650-fixing-missing-dependencies',
-                invalid_regex: 'http://help.nyaruka.com/en/articles/3747654-invalid-regular-expressions'
-            },
+            help: {},
 
             endpoints: {
 
