Add charcount to send message dialog

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -170,11 +170,13 @@
   -include "components-body.html"
 
   -block temba-store
-    %temba-store(
-      completions="/mr/docs/completion.json"
-      functions="/mr/docs/functions.json"
-      fields="/api/v2/fields.json"
-      globals="/api/v2/globals.json")
+    
+    -if user.is_authenticated
+      %temba-store(
+        completions="/mr/docs/completion.json"
+        functions="/mr/docs/functions.json"
+        fields="/api/v2/fields.json"
+        globals="/api/v2/globals.json")
 
   .flex.flex-col.h-full
     <!-- Header -->
