--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -3,8 +3,9 @@ html input {
 }
 
 html {
-  --font-family: 'Roboto', Helvetica, Arial, sans-serif;
 
+  
+  --font-family: 'Roboto', Helvetica, Arial, sans-serif;
   --primary-rgb: 35, 135, 202;
   --secondary-rgb: 140, 51, 140;
   --tertiary-rgb: 135, 202, 35;
@@ -31,6 +32,8 @@ html {
 
   --widget-box-shadow-focused: 0 0 0 3px rgba(164, 202, 254, .45);
   --widget-box-shadow-focused-error: 0 0 0 3px rgba(var(--error-rgb), 0.3);
+
+  --shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 
   /* page text, borders, widgets */
   --color-text: #555;
@@ -90,6 +93,8 @@ html {
 
   --header-bg: var(--color-primary-dark);
 
+  --temba-textinput-padding: 9px;
+  --temba-textinput-font-size: var(--font-size);
 
   font-size: var(--font-size);
   font-weight: 300;
