Unlimeted history refresh on read contact page

--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -209,8 +209,7 @@
     %tr.poll{ ic-src:"/contact/history/{{contact.uuid}}/?after={{recent_start}}",
               ic-trigger-on:"scrolled-into-view",
               ic-poll:"5s",
-              ic-target:"table .recent",
-              ic-poll-repeats:"30" }
+              ic-target:"table .recent"}
 
     %tbody.recent
 
