--- a/templates/utils/forms/completion_textarea.haml
+++ b/templates/utils/forms/completion_textarea.haml
@@ -7,6 +7,6 @@
   completionsEndpoint="/mr/docs/completion.json"
   functionsEndpoint="/mr/docs/functions.json"
   fieldsEndpoint="/api/v2/fields.json"
-  globalsEndpoint:"/api/v2/globals.json"
+  globalsEndpoint="/api/v2/globals.json"
   textarea>
 </rp-completion>
