--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -27,10 +27,10 @@
 
           .lp-nav.upper
             -for folder in folders
-              .lp-nav-item{'class': '{% if request.path == folder.url %}font-normal{% endif %}' }
-                .name{onclick:"goto(event)", href:'{{folder.url}}'}
+              .lp-nav-item(class="{% if request.path == folder.url %}font-normal{% endif %}")
+                .name(onclick="goto(event)" href='{{folder.url}}')
                   {{folder.label}}
-                .count{onclick:"goto(event)", href:'{{folder.url}}'}
+                .count(onclick="goto(event)" href='{{folder.url}}')
                   {{ folder.count | intcomma }}
 
           .lp-nav.upper
@@ -39,10 +39,10 @@
             .inner-scroll
               -for group in groups
                 -if group.is_dynamic
-                  .lp-nav-item{'class': '{% if current_group.id == group.pk %}font-normal{% endif %}' }
-                    .name{onclick:"goto(event)", href:'{% url "contacts.contact_filter" group.uuid %}'}
+                  .lp-nav-item(class="{% if current_group.id == group.pk %}font-normal{% endif %}")
+                    .name(onclick="goto(event)" href='{% url "contacts.contact_filter" group.uuid %}')
                       {{group.label}}
-                    .count{onclick:"goto(event)", href:'{% url "contacts.contact_filter" group.uuid %}'}
+                    .count(onclick="goto(event)" href='{% url "contacts.contact_filter" group.uuid %}')
                       {{ group.count | intcomma }}
 
           .lp-nav.lower
@@ -52,20 +52,20 @@
             .inner-scroll
               -for group in groups
                 -if not group.is_dynamic
-                  .lp-nav-item{'class': '{% if current_group.id == group.pk %}font-normal{% endif %}' }
-                    .name{onclick:"goto(event)", href:'{% url "contacts.contact_filter" group.uuid %}'}
+                  .lp-nav-item(class="{% if current_group.id == group.pk %}font-normal{% endif %}")
+                    .name(onclick="goto(event)" href='{% url "contacts.contact_filter" group.uuid %}')
                       {{group.label}}
-                    .count{onclick:"goto(event)", href:'{% url "contacts.contact_filter" group.uuid %}'}
+                    .count(onclick="goto(event)" href='{% url "contacts.contact_filter" group.uuid %}')
                       {{ group.count | intcomma }}
 
           .flex-grow
             -if org_perms.contacts.contact_create
-              %temba-modax#create-label-modal{ header:'{% trans "Create Contact" %}', endpoint:"{% url 'contacts.contact_create' %}"}
+              %temba-modax#create-label-modal(header='{% trans "Create Contact" %}' endpoint="{% url 'contacts.contact_create' %}")
                 .button-light.mt-3
                   - trans "Create Contact"
 
             -if org_perms.contacts.contactgroup_create
-              %temba-modax#create-group-modal{ header:'{% trans "Create Group" %}', endpoint:"{% url 'contacts.contactgroup_create' %}", onloaded: "handleCreateGroupModalLoaded", onsubmitted: "handleCreateGroupModalSubmitted"}
+              %temba-modax#create-group-modal(header='{% trans "Create Group" %}' endpoint="{% url 'contacts.contactgroup_create' %}" onloaded="handleCreateGroupModalLoaded" onsubmitted="handleCreateGroupModalSubmitted")
                 .button-light.mt-3
                   - trans "Create Group"
 
@@ -73,7 +73,7 @@
 
           -if has_contacts
             -block contacts-list
-              .flex.w-full.mb-4.items-end.flex-wrap.justify-end.-mt-2{style:"min-height:41px"}
+              .flex.w-full.mb-4.items-end.flex-wrap.justify-end.-mt-2(style="min-height:41px")
 
                 -block action-buttons
                   -if org_perms.contacts.contact_update
@@ -101,21 +101,21 @@
                             -trans "Delete"
 
                         -if 'unlabel' in actions
-                          .button-action{onclick:'unlabelObjectRows({{current_group.pk}});'}
+                          .button-action(onclick="unlabelObjectRows({{current_group.pk}});")
                             .-mt-1.mr-2.glyph.icon-user-remove
                             -trans "Remove From Group"
 
                         -if 'label' in actions
                           .btn-group
-                            .button-action.dropdown-toggle{data-toggle:"dropdown", data-delay:"800"}
-                              .-mt-1.mr-2.glyph.icon-users-2{style:"width:16px"}
+                            .button-action.dropdown-toggle(data-toggle="dropdown" data-delay="800")
+                              .-mt-1.mr-2.glyph.icon-users-2(style="width:16px")
                               -trans "Groups"
 
                             %ul.dropdown-menu.label-menu.rounded-lg.border-none.px-4.py-3
                               -for group in groups
                                 -if not group.is_dynamic
                                   %li
-                                    .lbl-menu{'href':'#', onclick:'addContactToGroup({{group.pk}})', data-id:'{{group.pk}}'}
+                                    .lbl-menu(href='#' onclick='addContactToGroup({{group.pk}})' data-id='{{group.pk}}')
                                       .flex.items-center.py-1.hover-linked
                                         .glyph.message-label.label-checkbox
                                         .name.px-2
@@ -124,14 +124,14 @@
                                 - if groups
                                   %li.separator.-mx-4.border-b.my-3
                                 %li
-                                  .lbl-menu.add-group.hover-linked{ onclick:"handleAddGroupClicked()" }
+                                  .lbl-menu.add-group.hover-linked(onclick="handleAddGroupClicked()")
                                     - trans "New Group..."
 
-                        - if org_perms.msgs.broadcast_send and not reply_disabled
+                        -if org_perms.msgs.broadcast_send and not reply_disabled
                           -trans 'Send Message' as button_title
-                            %temba-modax#send-message-modal{ header:'{{title|escapejs}}', endpoint:"{% url 'msgs.broadcast_send' %}" }
-                              .button-action{onclick:"handleSendMessageClicked()"}
-                                .mr-2.glyph.icon-bubble-3{style:"font-size:14px"}
+                            %temba-modax#send-message-modal(header='{{title|escapejs}}' endpoint="{% url 'msgs.broadcast_send' %}")
+                              .button-action(onclick="handleSendMessageClicked()")
+                                .mr-2.glyph.icon-bubble-3(style="font-size:14px")
                                 {{button_title}}
 
                   .flex-grow.ml-1.self-end.items-end
@@ -173,17 +173,17 @@
                         %th
                           -if sort_field == field.key
                             -if sort_direction == 'desc'
-                              %a{href:"?sort_on={{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}"}
+                              %a(href="?sort_on={{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
                                 %div
                                   {{ field.label }}
                                   %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                             -else
-                              %a{href:"?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}"}
+                              %a(href="?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
                                 %div
                                   {{ field.label }}
                                   %span.sort.icon.icon-arrow-up51.sort-desc.visible
                           -else
-                            %a{href:"?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}"}
+                            %a(href="?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
                               %div
                                 {{ field.label }}
                                 %span.sort.icon.icon-arrow-down-2.sort-desc
@@ -191,47 +191,47 @@
                       - if object_list
                         -if sort_field == 'last_seen_on'
                           -if sort_direction == 'desc'
-                            %a{href:"?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}"}
+                            %a(href="?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
                               %div
                                 -trans "Last Seen On"
                                 %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                           -else
-                            %a{href:"?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}"}
+                            %a(href="?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
                               %div
                                 -trans "Last Seen On"
                                 %span.sort.icon.icon-arrow-up51.sort-desc.visible
                         -else
-                          %a{href:"?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}"}
+                          %a(href="?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
                             %div
                               -trans "Last Seen On"
                               %span.sort.icon.icon-arrow-down-2.sort-desc
 
                     %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
-                      - if object_list
+                      -if object_list
                         -if sort_field == 'created_on'
                           -if sort_direction == 'desc'
-                            %a{href:"?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}"}
+                            %a(href="?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}")
                               %div
                                 -trans "Created On"
                                 %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                           -else
-                            %a{href:"?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}"}
+                            %a(href="?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
                               %div
                                 -trans "Created On"
                                 %span.sort.icon.icon-arrow-up51.sort-desc.visible
                         -else
-                          %a{href:"?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}"}
+                          %a(href="?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
                             %div
                               -trans "Created On"
                               %span.sort.icon.icon-arrow-down-2.sort-desc
 
                 %tbody
-                  - for object in contacts
-                    %tr.contact.select-row.object-row{'data-uuid': '{{object.uuid}}', 'data-object-id':'{{object.id}}', onrowclick:'handleRowClicked("{{object.uuid}}")'}
+                  -for object in contacts
+                    %tr.contact.select-row.object-row(data-uuid="{{object.uuid}}" data-object-id="{{object.id}}" onrowclick='handleRowClicked("{{object.uuid}}")')
 
                       - if org_perms.contacts.contact_update or org_perms.msgs.broadcast_send
                         %td.contact.checkbox.object-row-checkbox
-                          %temba-checkbox{onclick:"handleRowSelection(this)"}
+                          %temba-checkbox(onclick="handleRowSelection(this)")
 
                       %td
                         .whitespace-no-wrap
@@ -250,7 +250,7 @@
                         .whitespace-no-wrap
                           -if object.last_seen_on
                             {% format_datetime object.last_seen_on %}
-                          - else
+                          -else
                             {{ "--" }}
                       %td.value-received.field_received
                         .whitespace-no-wrap
@@ -260,15 +260,15 @@
                       %td.hide
                         .value-labels
                           %nobr
-                            - for group in object.all_groups.all
-                              - if group.group_type == 'U'
-                                %span.label.label-info.lbl{ data-id: '{{group.id}}'}
-                                  %a{'href':'{% url "contacts.contact_filter" group.uuid %}'}
+                            -for group in object.all_groups.all
+                              -if group.group_type == 'U'
+                                %span.label.label-info.lbl(data-id="{{group.id}}")
+                                  %a(href="{% url 'contacts.contact_filter' group.uuid %}")
                                     {{group.name}}
 
                   -empty
                     %tr.empty_list
-                      %td{ colspan:'99' }
+                      %td(colspan="99")
                         -trans "No matching contacts."
 
                       -for field in contact_fields
@@ -284,8 +284,8 @@
                   .text-gray-400.text-sm.self-end.mt-2
                     -trans "To view more than 10,000 search results, save it as a group."
                 
-          - else
-            - include "contacts/empty_include.haml"
+          -else
+            -include "contacts/empty_include.haml"
 
 -block extra-style
   {{block.super}}
