Remove blurb about SMS from page title

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -6,9 +6,8 @@
 {% endblock %}
   %head
     %title
-      {% block page-title %}
-        {{ brand.name }} - Visually build interactive SMS Applications
-      {% endblock %}
+      -block page-title
+        {{ brand.name }}
 
     %meta{charset:"utf-8"}
     %meta{name:"viewport", content:"width=device-width, initial-scale=1.0"}
