--- a/templates/channels/types/kannel/claim.haml
+++ b/templates/channels/types/kannel/claim.haml
@@ -2,5 +2,5 @@
 -load i18n
 
 -block pre-form
-  -blocktrans
+  -blocktrans trimmed
     After entering your endpoint URL below, we'll provide you with the configuration details for your Kannel configuration file.
