--- a/templates/channels/types/kannel/config.haml
+++ b/templates/channels/types/kannel/config.haml
@@ -1,7 +1,7 @@
 -load i18n
 
 .card
-  -blocktrans
+  -blocktrans trimmed
     As a last step you'll need to configure Kannel to send and receive messages. Here is a stanza you
     can add to your Kannel configuration to enable sending and receiving.
 
