--- a/templates/channels/types/infobip/claim.haml
+++ b/templates/channels/types/infobip/claim.haml
@@ -2,12 +2,12 @@
 -load i18n
 
 -block pre-form
-  -blocktrans
+  -blocktrans trimmed
     You can connect your <a href="http://infobip.com">Infobip</a> number by entering your number, username and password
     here.
 
   .my-4
-    -blocktrans with brand.name as brand
+    -blocktrans trimmed with brand.name as brand
       After connecting your service we will provide URLs for the endpoints for InfoBip to call when they want
       to push a message to {{ brand }}.
 
