--- a/templates/channels/types/jiochat/claim.haml
+++ b/templates/channels/types/jiochat/claim.haml
@@ -2,9 +2,9 @@
 -load i18n compress temba
 
 -block pre-form
-  -blocktrans with name=brand.name
+  -blocktrans trimmed with name=brand.name
     You can connect a <a href="https://jiochat.com">JioChat Channel</a> to your {{ name }} workspace
     to automate sending and receiving JioChat messages.
   .mt-2
-    -blocktrans
+    -blocktrans trimmed
       To start copy the App ID and App Secret from the Developer Center into the form below and click Submit.
