--- a/templates/channels/types/line/claim.haml
+++ b/templates/channels/types/line/claim.haml
@@ -2,82 +2,82 @@
 -load i18n compress temba
 
 -block pre-form
-  -blocktrans with name=brand.name
+  -blocktrans trimmed with name=brand.name
     You can connect a <a href="https://developers.line.me/messaging-api/overview">LINE Bot</a> to your {{ name }} workspace
     to automate sending and receiving LINE messages.
-  -blocktrans
+  -blocktrans trimmed
     To start creating a LINE bot, go to <a href="https://developers.line.me/messaging-api/getting-started">Getting started with the Messaging API</a>.
 
   %ol.line-steps.card
     %li
-      -blocktrans
+      -blocktrans trimmed
         Access the <a href="https://developers.line.me/channels/">LINE Channels</a> page and add a new Channel.</li>
 
     %li
-      -blocktrans
+      -blocktrans trimmed
         Create a Line account using the application on your smartphone
 
     %li
-      -blocktrans
+      -blocktrans trimmed
         Activate the permission to login via web application in the "Settings > Account > Allow login"
 
     %li
-      -blocktrans
+      -blocktrans trimmed
         Register your email and password via the application "Settings > Account > Email Account"
 
     %li
-      -blocktrans
+      -blocktrans trimmed
         Create a new business account Line (With Messaging API enabled)
 
       %ol.line-steps
         %li
-          -blocktrans
+          -blocktrans trimmed
             In <a href="https://business.line.me/en/">LINE Business Center</a>, select "Messaging API" in the "Services"
 
         %li
-          -blocktrans
+          -blocktrans trimmed
             Select "Start using Messaging API"
 
         %li
-          -blocktrans
+          -blocktrans trimmed
             Enter your credentials created through the application and wait for the confirmation code in it.
 
           .important
             %p
-              -blocktrans
+              -blocktrans trimmed
                 Note: At this time you must create a LINE business account and some information, for example, address, phone, etc., will be requested.
 
         %li
-          -blocktrans
+          -blocktrans trimmed
             After the creation process of the LINE business account, you will see the page to add a new channel of communication "Messaging API." Enter the name and select the appropriate category and click OK.
 
         %li
-          -blocktrans
+          -blocktrans trimmed
             In the next step, click the "LINE @ Manager" and it will redirect you to the API activation page.
 
         %li
-          -blocktrans
+          -blocktrans trimmed
             Click "Enable API" and confirm. (By doing so, the status of your API will be "Valid")
 
         %li
-          -blocktrans
+          -blocktrans trimmed
             Enable the option to allow the use of Webhooks and click "Save."
 
     %li
-      -blocktrans
+      -blocktrans trimmed
         Set your bot:
 
       %ol.line-steps
         %li
-          -blocktrans
+          -blocktrans trimmed
             Click on the menu "Accounts" at the top of the page at the link <a href="https://business.line.me">https://business.line.me</a>
 
         %li
-          -blocktrans
+          -blocktrans trimmed
             In the communication channel of your choice, click on the "LINE Developers" button, accept the terms, and it will direct you to a page with the information needed to fill out in the form below (Channel ID, Channel Name, Channel Secret and Channel Access Token).
 
           %p
-            -blocktrans
+            -blocktrans trimmed
               Note: To generate the Channel Access Token click on "Issue" button
 
 -block extra-style
