--- a/templates/channels/types/macrokiosk/claim.haml
+++ b/templates/channels/types/macrokiosk/claim.haml
@@ -2,5 +2,5 @@
 -load i18n
 
 -block pre-form
-  -blocktrans
+  -blocktrans trimmed
     You can connect your number by entering your credentials here.
