--- a/templates/channels/types/telegram/claim.haml
+++ b/templates/channels/types/telegram/claim.haml
@@ -3,27 +3,27 @@
 
 
 -block pre-form
-  -blocktrans with name=brand.name
+  -blocktrans trimmed with name=brand.name
     You can connect a <a href="https://core.telegram.org/bots">Telegram Bot</a> to your {{ name}} workspace
     to automate sending and receiving Telegram messages.
 
-  -blocktrans
+  -blocktrans trimmed
     You will need to <a href="https://core.telegram.org/bots#create-a-new-bot">create a new Telegram bot</a> and
     get its Authentication Token. To do so:
 
   %ol.telegram-steps.card
     %li
-      -blocktrans
+      -blocktrans trimmed
         Start a new chat with the <a href="https://telegram.me/botfather">BotFather</a>. You can do so on your
         device by searching for "botfather" and starting a new chat.</li>
 
     %li
-      -blocktrans
+      -blocktrans trimmed
         In your @botfather chat, type in the command <code>/newbot</code>. Follow the instructions to name your bot and
         choose a username for it.
 
     %li
-      -blocktrans
+      -blocktrans trimmed
         Once you have created your bot, @botfather will provide you with the authentication token to use your bot.
         Enter that token below.
 
